--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -45,12 +44,10 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-picture-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-picture-2.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Jonathan Escobedo</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://github.com/JonathanIzecson" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         </div>
       </div>
 
@@ -74,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Jonathan Escobedo</h1>
-      <p><span class="typed" data-typed-items="Desarrollador"></span></p>
+      <p><span class="typed" data-typed-items="Desarrollador Fullstack"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -87,37 +84,35 @@
 
         <div class="section-title">
           <h2>Acerca de mi</h2>
-          <p>Egresado de la Universidad Tecnologica de Nezahualcoyotl como tecnico superior universitario de la carrera de TI Desarrollo de software multiplataforma. Mi curiosidad por la tecnologia comenzó hace aproximadamente 6 años al querer personalizar de forma profunda mis smartphones y computadoras o intentando arreglarlos yo mismo, una cosa me llevó a otra y luego a otra hasta que mi pasion por la tecnologia incrementó y decidí formarme profesionalmente en alguno de sus ambitos. Despues de dos años de carrera tecnica, multiples practicas y proyectos estoy mas que decidido a convertirme en un ingeniero de software. </p>
+          <p>Soy un apasionado del desarrollo de software, con una sólida formación académica/autodidacta y aproximadamente 3 años de experiencia en la creación de soluciones tecnológicas innovadoras. Mi enfoque principal ha sido aprender continuamente y adaptarme a las nuevas tecnologías y tendencias en el campo de la informática, así como compartir mi conocimiento con quien lo requiera.
+            Especializado en el desarrollo fullstack, combinando backend con Laravel y frontend con Vue.
+            Experiencia en la gestión de dependencias utilizando Composer y NPM. Hábil en el control de versiones con Git. Experiencia en la administración y configuración de servidores y sitios web, utilizando tanto interfaces gráficas como Forge y Linode, así como la terminal de forma remota a través de SSH. </p>
         </div>
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-picture-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-picture-2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Desarrollador web & movil</h3>
+            <h3>Desarrollador Fullstack</h3>
             <p class="font-italic">
               Autodidacta en constante aprendizaje, con determinacion y con el objetivo de crecer profesional y personalmente.
             </p>
             <div class="row">
-              <div class="col-lg-6">
+              <div class="col-lg-4">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Nacimiento:</strong> 10 de Octubre de 1996</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Telefono:</strong> 5566221816</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Ciudad:</strong> Edo. Mexico, Mexico</li>
                 </ul>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-8">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Edad:</strong> 24</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>N.estudios:</strong> Tecnico superior universitario</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Correo:</strong> jonathanemmanuel.2292@gmail.com</li>
                 </ul>
               </div>
             </div>
+            <h3>Mi experiencia</h3>
             <p>
-              Cuento con experiencia liderando equipos de trabajo escolares en los cuales se ha demostrado un desempeño favorable, así como tambien soy capaz de recibir ordenes e instrucciones que nos dirijan hacia el cumplimiento del objetivo del equipo.
-              En ambas posiciones me gusta mantener una buena comunicacion dando mi punto de vista y respetando el de los demas. Una de mis metas a corto plazo es pertenecer a un equipo de desarrollo agil en un ambiente laboral lo cual creo que me ayudaria bastante en mi desarrollo profesional y personal. 
+              Gestión integral de proyectos tecnológicos, abarcando desde el levantamiento de requerimientos hasta el análisis y desarrollo de nuevas funcionalidades y módulos, así como el mantenimiento de los existentes.  Implementación y configuración de tecnologías para la comunicación en tiempo real, como Pusher, Administración de bases de datos MySQL. Generación de reportes utilizando tanto un ORM como SQL puro. Administración y configuración de servidores, sitios web y DNS, Atención a tickets, ofreciendo soluciones rápidas y efectivas para garantizar la satisfacción del cliente y el éxito de la operación. 
             </p>
           </div>
         </div>
@@ -140,14 +135,14 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">90%</i></span>
+              <span class="skill">Laravel <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">75%</i></span>
+              <span class="skill">Vue JS <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -161,9 +156,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Spring Framework <i class="val">70%</i></span>
+              <span class="skill">Spring Framework <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -179,16 +174,16 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Java <i class="val">90%</i></span>
+              <span class="skill">Java <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">SQL <i class="val">90%</i></span>
+              <span class="skill">SQL <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -217,51 +212,37 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Resumen</h3>
-            <div class="resume-item pb-0">
-              <h4>Jonathan Escobedo</h4>
-              <p><em>Recien egresado de la carrera de TI Desarrollo de software multiplataforma en busca de iniciar mi desarrollo profesional así como de nuevos retos. Autodidacta con experiencia academica en desarrollo web y movil. Con buen desempeño en equipos de trabajo.</em></p>
+            <h3 class="resume-title">Experiencia Profesional</h3>
+            <div class="resume-item">
+              <h4>Esfera Médica</h4>
+              <h5>Junio 2021 - Enero 2024</h5>
               <ul>
-                <li>5566221816</li>
-                <li>jonathanemmanuel.2292@gmail.com</li>
-                <li>Edo.Mexico, Mexico</li>
+                <li>Coordinador de Sistemas</li>
               </ul>
             </div>
-
             <h3 class="resume-title">Educacion</h3>
             <div class="resume-item">
               <h4>Universidad Tecnologica de Nezahualcoyotl</h4>
               <h5>2019 - 2021</h5>
               <p><em>TI. Desarrollo de Software Multiplataforma</em></p>
-              <p>Conocimientos adquiridos: Logica de programacion, programacion orientada a objetos, arquitectura MVC, sistemas operativos, control de versiones Git, manejo de IDE’s y otras herramientas de desarrollo (JCreator, eclipse, NetBeans, Mysql Workbench, CMD, Visual Studio Code).</p>
-            </div>
-            <div class="resume-item">
-              <h4>Instituto de Educacion Avanzada Plantel Prados</h4>
-              <h5>Febrero 2017 a Agosto 2018</h5>
-              <p><em>Bachillerato</em></p>
-              <p></p>
-            </div>
-            
+              <p>Conocimientos adquiridos: Logica de programacion, programacion orientada a objetos, arquitectura MVC, sistemas operativos, control de versiones Git, desarrollo web y movil y bases de datos.</p>
+            </div>            
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             
             <h3 class="resume-title">Cursos Online</h3>
             <div class="resume-item">
               <h4>Udemy</h4>
-              <h5>2021</h5>
-              <p><em>Aprende JavaScript y Jquery de 0 a 100</em></p>
-              <a href="https://www.udemy.com/certificate/UC-0e05d3e5-f020-4a35-b1f8-d99f41c0f5c2/" target="_blank" rel="noopener noreferrer">Certificado</a>
+              <p><em>Aprende a crear paquetes reutilizables para Laravel PHP</em></p>
+              <a href="https://www.udemy.com/certificate/UC-52c012d9-9b16-416d-801f-b07bf9b13c19/" target="_blank" rel="noopener noreferrer">Certificado</a>
+
+              <p><em>Seguridad en Linux: Conexiones SSH y cifrado con GPG</em></p>
+              <a href="https://www.udemy.com/certificate/UC-64566fff-33a7-4994-8837-1dc9e768defa/" target="_blank" rel="noopener noreferrer">Certificado</a>
+
+              <p><em>Aprende a diseñar una API RESTFul correctamente</em></p>
 
               <p><em>Crea un Sistema de Mesa de Ayuda con PHP, MySQL y JS (MVC) </em></p>
               <a href="https://www.udemy.com/certificate/UC-7bfeb030-e04e-47f8-9325-8edc418eb8bd/" target="_blank" rel="noopener noreferrer">Certificado</a>
-            </div>
-            <h3 class="resume-title">Experiencia Profesional</h3>
-            <div class="resume-item">
-              <h4>Proyecto estadia profesional</h4>
-              <h5>Enero - Abril 2021</h5>
-              <ul>
-                <li>REINGENIERIA   2   DEL   MODULO   DE EDICIÓN DEL CENTRO DE NOTICIAS MEXICO</li>
-              </ul>
             </div>
           </div>
         </div>
@@ -285,15 +266,15 @@
                 <h2 class="card-title">HelpDesk: Mesa de ayuda</h2>
                 <img src="assets/img/portfolio/helpdesk-home.png" class="img-fluid" alt="">
                 <p class="card-text">Mesa de ayuda creada con la plantilla Start UI hecha con bootstrap. En la programacion se utilizó PHP, JavaScript, MySQL con arquitectura MVC.
-                  <ul>
+                  <!-- <ul>
                     Accesos
                     <li>Usuario: usuario@helpdesk.com - Contraseña: 123456</li>
                     <li>Soporte: soporte@helpdesk.com - Contraseña: 123456</li>
-                  </ul>
+                  </ul> -->
                 </p>
               </div>
               <div class="card-footer">
-                <a href="https://helpdesk-mesa-de-ayuda.000webhostapp.com/" target="_blank" class="btn btn-primary btn-sm">Ir al sitio</a>
+                <a href="https://github.com/JonathanIzecson/HelpDesk" target="_blank" class="btn btn-primary btn-sm">Repositorio</a>
               </div>
             </div>
           </div>
@@ -609,22 +590,6 @@
     </section> --><!-- End Contact Section -->
 
   </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
